updated and fixed css image not showing in About.html page

--- a/css/screen.css
+++ b/css/screen.css
@@ -180,12 +180,13 @@ section.aboutme {
 }
 
 section.aboutme article {
-	padding: 0 20px 0 500px;
-	/*padding: 0 20px 0 515px;*/
+	padding: 0 20px 0 515px;
 	/*background: url(../images/lester.jpg) no-repeat 0 5px;*/
 	min-height: 220px;
 
 }
+
+
 
 /*Section Contact*/
 
